beginnings of the api documentation

--- a/tox.ini
+++ b/tox.ini
@@ -14,12 +14,14 @@ deps= flake8
 commands = flake8 {posargs:src testing}
 
 [testenv:docs]
-deps = sphinx
+deps =
+  sphinx
+  attrs
 commands =
   sphinx-build \
     -b html \
     -d build/sphinx-doctrees \
-    docs build/htmldocs
+    docs build/htmldocs {posargs}
 
 
 [flake8]
