resuffle examples, add mini example

--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,8 @@ commands = flake8 {posargs:src testing}
 [testenv:docs]
 deps =
   sphinx
+  requests
+  selenium
 commands =
   sphinx-build \
     -b html \
