--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,23 @@
 [tox]
-envlist = py{27,35},codechecks
+envlist = py{2,3},codechecks
 
 [testenv]
-deps=
+setenv=
+	PYTHONWARNINGS=once::
+deps =
+  attrs>=17.4.0
   setuptools_scm
   pytest
 commands = py.test
 
 [testenv:codechecks]
 skip_install = true
-deps= flake8
+deps = flake8
 commands = flake8 {posargs:src testing}
 
 [testenv:docs]
 deps =
+  attrs>=17.4.0
   sphinx
   requests
   selenium
@@ -27,5 +31,5 @@ commands =
 [flake8]
 max_line_length = 100
 
-[pytest]
+[tool:pytest]
 testdirs = ./testing
