complete metadata update

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,26 +10,22 @@ classifiers =
     Topic :: Utilities
     License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
     Topic :: Software Development :: Libraries :: Python Modules
-    Programming Language :: Python :: 2.7
-    Programming Language :: Python :: 3.4
-    Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Intended Audience :: Developers
     Development Status :: 4 - Beta
 
 [options]
+requires_python = >= 3.6
 packages = sentaku
 package_dir = =src
-setup_requires = setuptools_scm
 install_requires =
-    attrs >= 17.4.0
-    reg >= 0.10
+    attrs >= 20.4.0
     dectate >= 0.12
-    importscan
 
 [options.extras_require]
 test = pytest
 examples = selenium
-
-[wheel]
-universal = 1
