upgrade tox config for python 3.6-3.10

--- a/tox.ini
+++ b/tox.ini
@@ -1,26 +1,17 @@
 [tox]
-envlist = py{2,3},codechecks
+envlist = py{36,36,38,39,310}
+isolated_build=true
+minversion=3.4.0
 
 [testenv]
 setenv=
 	PYTHONWARNINGS=once::
-deps =
-  attrs>=17.4.0
-  setuptools_scm
-  pytest
+extras = test
 commands = py.test
 
-[testenv:codechecks]
-skip_install = true
-deps = flake8
-commands = flake8 {posargs:src testing}
 
 [testenv:docs]
-deps =
-  attrs>=17.4.0
-  sphinx
-  requests
-  selenium
+extras = docs
 commands =
   sphinx-build \
     -b html \
