--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -49,7 +49,7 @@ jobs:
     - uses: actions/cache@v2
       with:
         path: ${{ env.pythonLocation }}
-        key: ${{ env.pythonLocation }
+        key: ${{ env.pythonLocation }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
