explicit long description data

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,8 @@ name = sentaku
 author = RonnyPfannschmidt
 author_email = opensource@ronnypfannschmidt.de
 description = variadic ux implementation for testing
+long_description = file:README.rst
+long_description_content_type = text/x-rst
 license = MPLv2
 keywords = testing
 url = https://github.com/RonnyPfannschmidt/Sentaku
