drop legacy config and go all in on hatch

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,86 @@
 [build-system]
-requires = ["setuptools>=52", "setuptools_scm[toml]>=6.2.3"]
-build-backend="setuptools.build_meta"
+requires = ["hatchling", "hatch-vcs"]
+build-backend = "hatchling.build"
 
-[tool.setuptools_scm]
+[project]
+name = "sentaku"
+dynamic = ["version"]
+description = "variadic ux implementation for testing"
+readme = "README.rst"
+license = "MPL-2.0"
+requires-python = ">=3.8"
+
+keywords = [
+    "testing",
+]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
+    "Programming Language :: Python :: 3.6",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Utilities",
+]
+dependencies = [
+    "typing-extensions",
+    "attrs >= 19.0.0",
+    "dectate >= 0.12",
+]
+
+[[project.authors]]
+name = "RonnyPfannschmidt"
+email = "opensource@ronnypfannschmidt.de"
+
+[project.optional-dependencies]
+docs = [
+    "requests",
+    "selenium",
+    "sphinx",
+]
+examples = [
+    "selenium",
+]
+test = [
+    "pytest",
+]
+
+[tool.hatch.version]
+source = "vcs"
+
+[project.urls]
+Homepage = "https://github.com/Redhatqe/Sentaku"
+
+
+[tool.hatch.envs.test]
+features = ["test"]
+[[tool.hatch.envs.test.matrix]]
+python = ["3.8", "3.9", "3.10", "3.11"]
+
+
+
+[tool.hatch.envs.test.scripts]
+test = "pytest {args}"
+
+
+[tool.hatch.envs.docs]
+features = ["docs"]
+
+[tool.hatch.envs.docs.scripts]
+build = """sphinx-build -b html \
+           -d build/sphinx-doctrees \
+           docs build/htmldocs {args}
+          """
+
+
+
+
+
+[tool.pytest.legacy_ini]
+testdirs = ["./testing"]
+
+[tool.mypy]
+python_version="3.8"
