--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -16,14 +16,16 @@ jobs:
     runs-on: ubuntu-latest
     name: Python sdist/wheel
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-python@v2
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - uses: actions/setup-python@v4
       with:
         python-version: "3.9"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install --upgrade wheel setuptools build
+        pip install --upgrade build
 
     - name: Build package
       run: python -m build -o dist/
@@ -38,12 +40,12 @@ jobs:
     strategy:
       matrix:
         # todo: extract from source
-        python-version: [3.6, 3.7, 3.8, 3.9, '3.10']
+        python-version: [3.8, 3.9, '3.10', '3.11', '3.12']
         install-from: ["dist/*.whl"]
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - uses: actions/cache@v2
@@ -52,9 +54,6 @@ jobs:
         key: ${{ env.pythonLocation }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -U setuptools setuptools_scm
-        pip install pytest
     - uses: actions/download-artifact@v2
       with:
         name: dist
