--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -53,7 +53,7 @@ jobs:
         path: ${{ env.pythonLocation }}
         key: ${{ env.pythonLocation }}
     - name: Install dependencies
-      run: |
+      run: pip install pytest
     - uses: actions/download-artifact@v2
       with:
         name: dist
