--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -40,7 +40,7 @@ jobs:
     strategy:
       matrix:
         # todo: extract from source
-        python-version: [3.8, 3.9, '3.10', '3.11', '3.12']
+        python-version: [3.8, 3.9, '3.10', '3.11']
         install-from: ["dist/*.whl"]
     steps:
     - uses: actions/checkout@v3
