--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,13 +21,14 @@ repos:
     - id: pyupgrade
       args: [--py38-plus]
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v0.991'
+    rev: 'v1.0.0'
     hooks:
     - id: mypy
       additional_dependencies:
       - types-requests
       - attrs
+      - pytest
 - repo: https://github.com/tox-dev/pyproject-fmt
-  rev: "0.6.0"
+  rev: "0.8.0"
   hooks:
     - id: pyproject-fmt
