--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,12 +42,12 @@ email = "opensource@ronnypfannschmidt.de"
 
 [project.optional-dependencies]
 docs = [
-  "requests",
-  "selenium",
-  "sphinx",
+  "requests>=2.20",
+  "selenium>=4",
+  "sphinx>=6.1.3",
 ]
 examples = [
-  "selenium",
+  "selenium>4",
 ]
 test = [
   "pytest>7.1",
@@ -71,10 +71,11 @@ test = "pytest {args}"
 features = ["docs"]
 
 [tool.hatch.envs.docs.scripts]
-build = """sphinx-build -b html \
-           -d build/sphinx-doctrees \
-           docs build/htmldocs {args}
-          """
+build = """
+    sphinx-build -b html \
+        -d build/sphinx-doctrees \
+        docs build/htmldocs {args}
+    """
 
 [tool.hatch.envs.mypy]
 features = ["test"]
