--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,17 +7,16 @@ requires = [
 
 [project]
 name = "sentaku"
-dynamic = [
-  "version",
-]
 description = "variadic ux implementation for testing"
 readme = "README.rst"
-license = "MPL-2.0"
-requires-python = ">=3.8"
-
 keywords = [
   "testing",
 ]
+license = "MPL-2.0"
+authors = [
+    {name = "RonnyPfannschmidt", email = "opensource@ronnypfannschmidt.de"}
+]
+requires-python = ">=3.8"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
@@ -30,16 +29,13 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Utilities",
 ]
+dynamic = [
+  "version",
+]
 dependencies = [
   "attrs>=22",
-  "dectate>=0.12",
   "typing-extensions>=4.5",
 ]
-
-[[project.authors]]
-name = "RonnyPfannschmidt"
-email = "opensource@ronnypfannschmidt.de"
-
 [project.optional-dependencies]
 docs = [
   "requests>=2.20",
@@ -47,20 +43,20 @@ docs = [
   "sphinx>=6.1.3",
 ]
 examples = [
-  "selenium>4",
+  "selenium>=4",
 ]
 test = [
   "pytest>7.1",
 ]
+[project.urls]
+Homepage = "https://github.com/Redhatqe/Sentaku"
 
 [tool.hatch.version]
 source = "vcs"
 
-[project.urls]
-Homepage = "https://github.com/Redhatqe/Sentaku"
-
 [tool.hatch.envs.test]
 features = ["test"]
+
 [[tool.hatch.envs.test.matrix]]
 python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
@@ -84,6 +80,7 @@ dependencies = [
     "types-requests",
     "pytest",
 ]
+
 [tool.hatch.envs.mypy.scripts]
 check = "mypy {args:src/sentaku testing examples}"
 
@@ -95,12 +92,4 @@ pythonpath = ["./examples"]
 python_version="3.8"
 strict = true
 mypy_path = ["$MYPY_CONFIG_FILE_DIR/src", "$MYPY_CONFIG_FILE_DIR/examples"]
-
-[[tool.mypy.overrides]]
-module = ["selenium.*"]
-ignore_missing_imports=true
-
-
-[tool.pyright]
-include = ["src","examples", "testing"]
-pythonVersion = "3.8"
+overrides = [{module = ["selenium.*"], ignore_missing_imports=true}]
