Fix catalog-info.yaml files
The `catalog-info.yaml` file is invalid, make sure it passes basic
sanity from the backstage pre-commit validation:

https://console.one.redhat.com/docs/quality-community/Component/qe-toolbelt-catalog/onboarding/#pre-commit

Also fix additional formatting found by running pre-commit on the
changed files :)

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,10 @@ repos:
       rev: v3.9.0
       hooks:
           - id: reorder-python-imports
-            args: [--application-directories=.:examples:src, --py38-plus]
+            args:
+                - --application-directories=.:examples:src
+                - --py38-plus
+
     - repo: https://github.com/psf/black
       rev: 23.1.0
       hooks:
@@ -43,3 +46,16 @@ repos:
       rev: 0.9.1
       hooks:
           - id: pyproject-fmt
+
+    # Backstage linter
+    - repo: local
+      hooks:
+          - id: backstage-entity-validator
+            name: backstage-entity-validator
+            language: system
+            files: catalog-info\.yaml$
+            entry: npx @roadiehq/backstage-entity-validator validate-entity
+            exclude: |
+                (?x)^(
+                  user_repo.*
+                )$
