--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -20,9 +20,9 @@ jobs:
             - uses: actions/checkout@v4
               with:
                   fetch-depth: 0
-            - uses: actions/setup-python@v4
+            - uses: actions/setup-python@v5
               with:
-                  python-version: '3.9'
+                  python-version: '3.x'
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
@@ -41,15 +41,15 @@ jobs:
         strategy:
             matrix:
         # todo: extract from source
-                python-version: [3.8, 3.9, '3.10', '3.11']
+                python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
                 install-from: [dist/*.whl]
         steps:
             - uses: actions/checkout@v4
             - name: Set up Python ${{ matrix.python-version }}
-              uses: actions/setup-python@v4
+              uses: actions/setup-python@v5
               with:
                   python-version: ${{ matrix.python-version }}
-            - uses: actions/cache@v3
+            - uses: actions/cache@v4
               with:
                   path: ${{ env.pythonLocation }}
                   key: ${{ env.pythonLocation }}
@@ -69,9 +69,9 @@ jobs:
         runs-on: ubuntu-latest
         needs: [dist]
         steps:
-            - uses: actions/setup-python@v4
+            - uses: actions/setup-python@v5
               with:
-                  python-version: '3.9'
+                  python-version: '3.x'
             - uses: actions/download-artifact@v3
               with:
                   name: dist
