--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,16 +16,16 @@ license = "MPL-2.0"
 authors = [
     {name = "RonnyPfannschmidt", email = "opensource@ronnypfannschmidt.de"}
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
-    "Programming Language :: Python :: 3.6",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Utilities",
 ]
@@ -58,7 +58,7 @@ source = "vcs"
 features = ["test"]
 
 [[tool.hatch.envs.test.matrix]]
-python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
+python = ["3.9", "3.10", "3.11", "3.12"]
 
 [tool.hatch.envs.test.scripts]
 test = "pytest {args}"
@@ -89,7 +89,7 @@ testpaths = ["./testing"]
 pythonpath = ["./examples"]
 
 [tool.mypy]
-python_version="3.8"
+python_version="3.9"
 strict = true
 mypy_path = ["$MYPY_CONFIG_FILE_DIR/src", "$MYPY_CONFIG_FILE_DIR/examples"]
 overrides = [{module = ["selenium.*"], ignore_missing_imports=true}]
