--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,9 @@
 ---
 repos:
     - repo: https://github.com/astral-sh/ruff-pre-commit
-      rev: v0.8.6
+      rev: v0.12.4
       hooks:
-          - id: ruff
+          - id: ruff-check
             args: [--fix]
           - id: ruff-format
     - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -13,7 +13,7 @@ repos:
           - id: end-of-file-fixer
           - id: debug-statements
     - repo: https://github.com/pre-commit/mirrors-mypy
-      rev: v1.16.1
+      rev: v1.17.0
       hooks:
           - id: mypy
             additional_dependencies:
