--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -30,7 +30,7 @@ jobs:
 
             - name: Build package
               run: python -m build -o dist/
-            - uses: actions/upload-artifact@v3
+            - uses: actions/upload-artifact@v4
               with:
                   name: dist
                   path: dist
@@ -55,7 +55,7 @@ jobs:
                   key: ${{ env.pythonLocation }}
             - name: Install dependencies
               run: pip install pytest
-            - uses: actions/download-artifact@v3
+            - uses: actions/download-artifact@v4
               with:
                   name: dist
                   path: dist
@@ -72,7 +72,7 @@ jobs:
             - uses: actions/setup-python@v5
               with:
                   python-version: '3.x'
-            - uses: actions/download-artifact@v3
+            - uses: actions/download-artifact@v4
               with:
                   name: dist
                   path: dist
@@ -84,12 +84,12 @@ jobs:
         if: ${{ github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags') }}
         needs: [dist_check, test]
         steps:
-            - uses: actions/download-artifact@v3
+            - uses: actions/download-artifact@v4
               with:
                   name: dist
                   path: dist
             - name: Publish package to PyPI
-              uses: pypa/gh-action-pypi-publish@master
+              uses: pypa/gh-action-pypi-publish@release/v1
               with:
                   user: __token__
                   password: ${{ secrets.pypi_token }}
