Configure Ruff for single-line imports and apply formatting
- Add force-single-line = true to Ruff isort configuration
- Run pre-commit to apply single-line import formatting across codebase
- Fix 9 import statements to use one import per line
- Update pyproject.toml formatting via pyproject-fmt hook

This improves code readability and consistency by ensuring all imports
are formatted with one import statement per line.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,6 +92,8 @@ lint.select = [
   "UP", # pyupgrade
   "W",  # pycodestyle warnings
 ]
+lint.isort.force-single-line = true
+
 lint.isort.known-first-party = [ "sentaku" ]
 
 [tool.pytest.ini_options]
